<resources>
    <string name="app_name">Converter</string>
    <string name="Home">Главная</string>
    <string name="Edit">Редактировать</string>
    <string name="Settings">Настройки</string>
    <string name="Update">Обновить</string>
    <string name="Currency">Валюта</string>
    <string name="Cost">Стоимость</string>
    <string name="Source">Источник</string>
    <string name="field">\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009</string>
    <string name="Country">Страна</string>
    ///////////////////////////////
    <string name="code1">AUD</string>
    <string name="code2">EUR</string>
    <string name="code3">AZN</string>
    <string name="code4">ALL</string>
    <string name="code5">DZD</string>
    <string name="code6">XCD</string>
    <string name="code7">AOA</string>
    <string name="code8">EUR</string>
    <string name="code9">ARS</string>
    <string name="code10">AMD</string>
    <string name="code11">AWG</string>
    <string name="code12">AFN</string>
    <string name="code13">BDT</string>
    <string name="code14">BBD</string>
    <string name="code15">BHD</string>
    <string name="code16">BYN</string>
    <string name="code17">EUR</string>
    <string name="code18">BGN</string>
    <string name="code19">BOB</string>
    <string name="code20">BRL</string>
    <string name="code21">BTN</string>
    <string name="code22">VUV</string>
    <string name="code23">EUR</string>
    <string name="code24">GBP</string>
    <string name="code25">HUF</string>
    <string name="code26">VES</string>
    <string name="code27">VND</string>
    <string name="code28">XAF</string>
    <string name="code29">HTG</string>
    <string name="code30">GMD</string>
    <string name="code31">GHS</string>
    <string name="code32">GTQ</string>
    <string name="code33">GNF</string>
    <string name="code34">EUR</string>
    <string name="code35">GIP</string>
    <string name="code36">HNL</string>
    <string name="code37">HKD</string>
    <string name="code38">XCD</string>
    <string name="code39">DKK</string>
    <string name="code40">EUR</string>
    <string name="code41">GEL</string>
    <string name="code42">DKK</string>
    <string name="code43">XCD</string>
    <string name="code44">EGP</string>
    <string name="code45">ZMW</string>
    <string name="code46">ZWL</string>
    <string name="code47">ILS</string>
    <string name="code48">INR</string>
    <string name="code49">IDR</string>
    <string name="code50">JOD</string>
    <string name="code51">IQD</string>
    <string name="code52">IRR</string>
    <string name="code53">EUR</string>
    <string name="code54">ISK</string>
    <string name="code55">EUR</string>
    <string name="code56">EUR</string>
    <string name="code57">KZT</string>
    <string name="code58">KHR</string>
    <string name="code59">XAF</string>
    <string name="code60">CAD</string>
    <string name="code61">USD</string>
    <string name="code62">RUB</string>
    <string name="code63">UAH</string>
    ///////////////////////////////
    <string name="name1">Австралия</string>
    <string name="name2">Австрия</string>
    <string name="name3">Азербайджан</string>
    <string name="name4">Албания</string>
    <string name="name5">Алжир</string>
    <string name="name6">Ангилья</string>
    <string name="name7">Ангола</string>
    <string name="name8">Андорра</string>
    <string name="name9">Аргентина</string>
    <string name="name10">Армения</string>
    <string name="name11">Аруба</string>
    <string name="name12">Афганистан</string>
    <string name="name13">Бангладеш</string>
    <string name="name14">Барбадос</string>
    <string name="name15">Бахрейн</string>
    <string name="name16">Белоруссия</string>
    <string name="name17">Бельгия</string>
    <string name="name18">Болгария</string>
    <string name="name19">Боливия</string>
    <string name="name20">Бразилия</string>
    <string name="name21">Бутан</string>
    <string name="name22">Вануату</string>
    <string name="name23">Ватикан</string>
    <string name="name24">Великобритания</string>
    <string name="name25">Венгрия</string>
    <string name="name26">Венесуэла</string>
    <string name="name27">Вьетнам</string>
    <string name="name28">Габон</string>
    <string name="name29">Гаити</string>
    <string name="name30">Гамбия</string>
    <string name="name31">Гана</string>
    <string name="name32">Гватемала</string>
    <string name="name33">Гвинея</string>
    <string name="name34">Германия</string>
    <string name="name35">Гибралтар</string>
    <string name="name36">Гондурас</string>
    <string name="name37">Гонконг</string>
    <string name="name38">Гренада</string>
    <string name="name39">Гренландия</string>
    <string name="name40">Греция</string>
    <string name="name41">Грузия</string>
    <string name="name42">Дания</string>
    <string name="name43">Доминика</string>
    <string name="name44">Египет</string>
    <string name="name45">Замбия</string>
    <string name="name46">Зимбабве</string>
    <string name="name47">Израиль</string>
    <string name="name48">Индия</string>
    <string name="name49">Индонезия</string>
    <string name="name50">Иордания</string>
    <string name="name51">Ирак</string>
    <string name="name52">Иран</string>
    <string name="name53">Ирландия</string>
    <string name="name54">Исландия</string>
    <string name="name55">Испания</string>
    <string name="name56">Италия</string>
    <string name="name57">Казахстан</string>
    <string name="name58">Камбоджа</string>
    <string name="name59">Камерун</string>
    <string name="name60">Канада</string>
    <string name="name61">США</string>
    <string name="name62">Россия</string>
    <string name="name63">Украина</string>
</resources>